# PatchFlow

./: .gitignore  LICENSE  README.en.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
patchflow/: __init__.py  cli.py
patchflow/agents/: __init__.py  analyzer.py  blackboard.py  fixer_agent.py  react_agent.py  reviewer.py  schema.py
patchflow/core/: __init__.py  agent_orchestrator.py  agent_sandbox.py  chat_client.py  concurrency.py  config.py  language_registry.py  language_strategy.py  llm_client.py  orchestrator.py  planner.py  repl.py
patchflow/core/analysis/: error_analyzer.py  error_parser.py  strategy_selector.py
patchflow/core/fix/: breaker.py  budget.py  change_set.py  code_graph.py  conflict_detector.py  fixer.py  generator.py  memory_bank.py  patch_applicator.py  prompt_guard.py  scope_calculator.py  snapshot_manager.py  validator.py
patchflow/core/project/: codebase_index.py  context_collector.py  context_manager.py
patchflow/utils/: __init__.py  agent_display.py  code_reviewer.py  diff.py  logger.py  runner.py
tests/: test_breaker.py  test_budget.py  test_change_set.py  test_concurrency.py  test_conflict_detector.py  test_memory_bank.py  test_patch_applicator.py  test_pipeline_integration.py  test_prompt_guard.py  test_sandbox.py  test_validator.py
