[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchflow"
version = "1.0.0"
description = "AI 驱动的代码生成与自动修复 CLI 工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PatchFlow"},
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "numpy>=1.24",
]

[project.scripts]
patchflow = "patchflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
