[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchflow"
version = "1.0.0"
description = "AI 驱动的代码生成与自动修复 CLI 工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PatchFlow"},
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "numpy>=1.24",
]

[project.scripts]
patchflow = "patchflow.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]
tree-sitter = [
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-c>=0.21",
    "tree-sitter-cpp>=0.21",
    "tree-sitter-c-sharp>=0.21",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["patchflow"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["union-attr", "index", "operator", "arg-type", "assignment", "attr-defined", "no-any-return", "return-value"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
"patchflow/core/chat_client.py" = ["E501"]
"patchflow/core/repl.py" = ["E501"]
"patchflow/core/agent_orchestrator.py" = ["E501"]
"patchflow/core/planner.py" = ["E501"]
"patchflow/utils/code_reviewer.py" = ["E501"]
